remove unneded arquillian from tck, fix up number of tests in the release notes, fix up tck test run configs
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>