@@ -30,10 +30,6 @@
 
     <artifactId>jakarta.json-tck-tests</artifactId>
 
-    <properties>
-        <jakarta.json.version>2.1.0-SNAPSHOT</jakarta.json.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>jakarta.json</groupId>
@@ -72,7 +68,7 @@
                            <artifactItem>
                               <groupId>jakarta.json</groupId>
                               <artifactId>jakarta.json-api</artifactId>
-                              <version>${jakarta.json.version}</version>
+                              <version>${jsonp-api.version}</version>
                               <type>jar</type>
                               <overWrite>true</overWrite>
                               <outputDirectory>${project.build.directory}/signaturedirectory</outputDirectory>
@@ -87,31 +83,20 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
                 <configuration>
-                  <trimStackTrace>false</trimStackTrace>
-                  <failIfNoTests>true</failIfNoTests>
-                    <dependenciesToScan>jakarta.json:jakarta.json-tck-tests</dependenciesToScan>
-                    <systemPropertyVariables>
-                        <jimage.dir>${project.build.directory}/jdk11-bundle</jimage.dir>
-                        <signature.sigTestClasspath>${project.build.directory}/signaturedirectory/jakarta.json-api.jar:${project.build.directory}/jdk11-bundle/java.base:${project.build.directory}/jdk11-bundle/java.rmi:${project.build.directory}/jdk11-bundle/java.sql:${project.build.directory}/jdk11-bundle/java.naming</signature.sigTestClasspath>
-                    </systemPropertyVariables>
-                  </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
-                <configuration>
                     <dependenciesToScan>
                         <dependency>jakarta.json:jakarta.json-tck-tests</dependency>
                     </dependenciesToScan>
                     <trimStackTrace>false</trimStackTrace>
                     <failIfNoTests>true</failIfNoTests>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
                 </configuration>
                 <executions>
                     <execution>
                         <id>sigtests</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
                         <configuration>
                             <includes>
                                 <include>**/JSONPSigTest.java</include>
@@ -127,19 +112,7 @@
                         <configuration>
                             <excludes>
                                 <exclude>**/JSONPSigTest.java</exclude>
-                                <exclude>**/JsonProviderTest.java</exclude>
                             </excludes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>providertests</id>
-                        <configuration>
-                            <includes>
-                                <include>**/JsonProviderTest.java</include>
-                            </includes>
-                            <systemPropertyVariables>
-                                <jakarta.json.provider>jakarta.jsonp.tck.api.provider.JsonProviderTest.DummyJsonProvider</jakarta.json.provider>
-                            </systemPropertyVariables>
                         </configuration>
                     </execution>
                 </executions>
